--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
 <body>
-<p> Hi this is Albert </p>
+<p> Hi its Albert! </p>
 </body>
 </html> 
+<html>
+  <head>
+    <title> InComics </title>
+  </head>
+  <body bgcolor="#777777">
+    <h1>
+      <font color="#000000"> InComics </font>
+    </h1>
+  </body>
+</html>
