--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <title> InComics </title>
   </head>
-  <body bgcolor="#777777">
+  <body bgcolor="#777FFF">
     <h1>
       <font color="#000000"> InComics </font>
     </h1>
