--- a/index.html
+++ b/index.html
@@ -13,3 +13,12 @@
     </h1>
   </body>
 </html>
+<html>
+  <head>
+  </head>
+  <body>
+    <p style="color:white; background-color:black;">
+      Welcome to InComics!
+    </p>
+  </body>
+</html>
